# advent-of-code-2023

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: readme-start.yml
docs/: _config.yml  index.md
docs/assets/css/: style.scss
src/advent_of_code_2023/: console.py
src/advent_of_code_2023/days/day01/: solution.py
src/advent_of_code_2023/days/day02/: solution.py
src/advent_of_code_2023/days/day03/: solution.py
src/advent_of_code_2023/days/day04/: solution.py
src/advent_of_code_2023/days/day05/: solution.py
src/advent_of_code_2023/days/day06/: solution.py
src/advent_of_code_2023/days/day07/: README.md  solution.py
src/advent_of_code_2023/days/day08/: solution.py
src/advent_of_code_2023/days/day09/: solution.py
src/advent_of_code_2023/days/day10/: solution.py
src/advent_of_code_2023/days/day11/: solution.py
src/advent_of_code_2023/days/day12/: solution.py
src/advent_of_code_2023/days/day13/: solution.py
src/advent_of_code_2023/days/day14/: solution.py
src/advent_of_code_2023/days/day15/: solution.py
src/advent_of_code_2023/days/day16/: solution.py
src/advent_of_code_2023/days/day17/: solution.py
src/advent_of_code_2023/utils/: __init__.py  template.md
tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py
(+3 files in other folders)
