[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = "My solutions for the Advent of Code 2023 in Python using modern tooling"
authors = ["Geert Litjens <geert.litjens@radboudumc.nl>"]
readme = "README.md"
license = "MIT"
homepage = "https://geertlitjens.nl/advent-of-code-2023"
repository = "https://github.com/GeertLitjens/advent-of-code-2023"
keywords = ["advent of code"]


[tool.poetry.dependencies]
python = ">=3.8.1"
click = ">=8.1.3"
requests = ">=2.28.1"
colorama = ">=0.4.6"
numpy = ">=1.23.5"

[tool.poetry.scripts]
advent-of-code-2023 = "advent_of_code_2023.console:cli"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
flake8 = ">=6.0.0"
coverage = {extras = ["toml"], version = ">=6.5.0"}
pytest-cov = ">=4.0.0"
isort = ">=5.10.1"
flake8-isort = ">=5.0.3"
flake8-black = ">=0.3.5"
flake8-bugbear = ">=22.10.27"
flake8-bandit = ">=4.1.1"
safety = ">=2.3.3"
mypy = ">=0.991"
types-requests = ">=2.28.11.5"
types-colorama = ">=0.4.15.4"
typeguard = ">=2.13.3"
flake8-annotations = ">=2.9.1"
pytest-env = "^1.1.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["advent_of_code_2023"]
omit = ["src/advent_of_code_2023/days/day_template/*"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
